Fix home page header and properly align recipe pages home link and header reordering the cascade.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,9 +7,11 @@ header {
     background-color: beige;
     font-size: 16px;
     margin: 0px;
-    padding: 16px;
+    padding: 8px;
     color: orange;
     text-align: center;
+    display: block;
+    height: 300px
 }
 
 .recipe-card {
@@ -66,16 +68,23 @@ img {
     display: block;
 }
 
-.page-title {
-    display: block;
-    font-size: 32px;
-    
+.page-title, nav {
+    display: inline;
+    font-size: 64px;
+    margin: 32px;
 }
 
-.home {
+.home, nav {
+    display: flex;
+    font-size: 28px;
+    padding: 16px;
+    margin: 16px;
+}
+
+#home-page-title {
     display: block;
-    font-size: 16px;
-    text-align: left;
+    font-size: 72px;
+    padding: 72px
 }
 
 
